--- a/index2.html
+++ b/index2.html
@@ -447,7 +447,7 @@ A low score doesn't necessarily mean a high box office.
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.1.0/d3.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="isotope.pkgd.min.js"></script>
-
+<script src="multiple.js"></script>
  <script src="bar2.js"></script>
  <script src="bar.js"></script>
  <script>
