--- a/index2.html
+++ b/index2.html
@@ -435,7 +435,8 @@ A low score doesn't necessarily mean a high box office.
         <p class='prose'>
                 Through data analysis, our answer is that the mature film industry system will help the movie box office to improve like the big I.P system. 
                 Although we used to think that the vote counts a lot on box office with other factors like the personal charm of the actors counting similarly.
-                 they have not been able to work as well as before. 
+                 they have not been able to work as well as before.  </p>
+                 <p class='prose'>
                  Series films such as <i>Marvel Universe</i>, <i>Jurassic Park</i>, are getting higher box office than before,
                  The big IP comes from the planning of the mature editing teams, and the continued commercial work.
                  And the powerful special effects are even more inseparable from a mature technical team. 
@@ -443,8 +444,8 @@ A low score doesn't necessarily mean a high box office.
                  warm-hearted comedies like <i>Little Ghosts</i> are increasingly lacking box office competitiveness.
                  Whatever the film industry will bring to us, the fact is that viewers are increasingly looking at mature industrial products.
 
-
-        </p>
+</p>
+       
         </div>
 
      
