--- a/index2.html
+++ b/index2.html
@@ -267,7 +267,7 @@ Which director has accumulated the most money? You can click any circlebar below
 
    <div class="body-container">
         <div class="svg-container">
-           <svg id="circleBar" viewBox="0 0 310 310" xmlns="http://www.w3.org/2000/svg">
+           <svg id="circleBar" viewBox="0 0 310 310">
              <text id="circleBarPercentage" class="circle-bar-percentage" text-anchor="middle"></text>
              <text id="circleBarHours" class="circle-bar-hours" text-anchor="middle"></text>
              <text id="circleBarMessage" class="circle-bar-message" text-anchor="middle"></text>
